fixed the blurred text

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -547,11 +547,6 @@ body {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     transition: all 0.5s; }
-  .story__text {
-    transform: skewX(12deg); }
-    @media (max-width: 37.5em) {
-      .story__text {
-        transform: skewX(0); } }
   .story__caption {
     position: absolute;
     top: 50%;
